--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -38,8 +38,8 @@ ext {
     revJAXB = '4.0.1'
     revJAXRS = '2.1.1'
     revJedis = '3.3.0'
-    revJersey = '1.19.4'
-    revJerseyCommon = '2.22.2'
+    revJersey = '4.0.0-M1'
+    revJerseyCommon = '4.0.0-M1'
     revJsonPath = '2.4.0'
     revJq = '0.0.13'
     revJsr311Api = '1.1.1'
