--- a/java-sdk/build.gradle
+++ b/java-sdk/build.gradle
@@ -8,7 +8,8 @@ dependencies {
     implementation "com.fasterxml.jackson.core:jackson-databind:${revFasterXml}"
     implementation "com.google.guava:guava:${revGuava}"
     implementation "cglib:cglib:3.3.0"
-    implementation "com.sun.jersey:jersey-client:${revJersey}"
+    implementation "org.glassfish.jersey.core:jersey-client:${revJersey}"
+
     implementation "javax.ws.rs:javax.ws.rs-api:${revJAXRS}"
     implementation "org.glassfish.jersey.core:jersey-common:${revJerseyCommon}"
     implementation "org.openjdk.nashorn:nashorn-core:15.4"
