--- a/client/build.gradle
+++ b/client/build.gradle
@@ -19,8 +19,8 @@ dependencies {
     compileOnly 'org.jetbrains:annotations:23.0.0'
 
     implementation project(':conductor-common')
-    implementation "com.sun.jersey:jersey-client:${revJersey}"
-    implementation "javax.ws.rs:javax.ws.rs-api:${revJAXRS}"
+    implementation "org.glassfish.jersey.core:jersey-client:${revJersey}"
+    implementation "jakarta.ws.rs:jakarta.ws.rs-api:${revJAXRS}"
     implementation "org.glassfish.jersey.core:jersey-common:${revJerseyCommon}"
 
     implementation "com.netflix.spectator:spectator-api:${revSpectator}"
