--- a/client/build.gradle
+++ b/client/build.gradle
@@ -21,6 +21,8 @@ dependencies {
     implementation project(':conductor-common')
     implementation "org.glassfish.jersey.core:jersey-client:${revJersey}"
     implementation "jakarta.ws.rs:jakarta.ws.rs-api:${revJAXRS}"
+    implementation 'jakarta.platform:jakarta.jakartaee-api:10.0.0' //Needed to jakarta.ws.rs-api
+
     implementation "org.glassfish.jersey.core:jersey-common:${revJerseyCommon}"
 
     implementation "com.netflix.spectator:spectator-api:${revSpectator}"
