Add versions for correctness and tests

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -20,7 +20,7 @@ dependencies {
     implementation "com.fasterxml.jackson.core:jackson-databind:${revFasterXml}"
     implementation "com.fasterxml.jackson.core:jackson-core:${revFasterXml}"
     // https://github.com/FasterXML/jackson-modules-base/tree/master/afterburner
-    implementation "com.fasterxml.jackson.module:jackson-module-afterburner:${revFasterXml}"
+    implementation "com.fasterxml.jackson.module:jackson-module-afterburner"
 
     testImplementation 'org.springframework.boot:spring-boot-starter-validation'
 }
