--- a/common-persistence/build.gradle
+++ b/common-persistence/build.gradle
@@ -3,8 +3,8 @@ dependencies {
     implementation project(':conductor-common')
     implementation project(':conductor-core')
 
-    implementation "com.fasterxml.jackson.core:jackson-databind"
-    implementation "com.fasterxml.jackson.core:jackson-core"
+    implementation "com.fasterxml.jackson.core:jackson-databind:${revFasterXml}"
+    implementation "com.fasterxml.jackson.core:jackson-core:${revFasterXml}"
     implementation "org.apache.commons:commons-lang3"
 
 }
