--- a/es7-persistence/build.gradle
+++ b/es7-persistence/build.gradle
@@ -24,8 +24,8 @@ dependencies {
     implementation "org.apache.commons:commons-lang3"
     implementation "com.google.guava:guava:${revGuava}"
 
-    implementation "com.fasterxml.jackson.core:jackson-databind"
-    implementation "com.fasterxml.jackson.core:jackson-core"
+    implementation "com.fasterxml.jackson.core:jackson-databind:${revFasterXml}"
+    implementation "com.fasterxml.jackson.core:jackson-core:${revFasterXml}"
 
     implementation "org.elasticsearch.client:elasticsearch-rest-client:${revElasticSearch7}"
     implementation "org.elasticsearch.client:elasticsearch-rest-high-level-client:${revElasticSearch7}"
