--- a/grpc/build.gradle
+++ b/grpc/build.gradle
@@ -35,9 +35,9 @@ dependencies {
     implementation "io.grpc:grpc-stub:${revGrpc}"
     implementation "jakarta.annotation:jakarta.annotation-api:${revJakartaAnnotation}"
     implementation "javax.annotation:javax.annotation-api:1.3.2" //Needs to be added as a workaround for the generated tags
-    implementation "com.fasterxml.jackson.core:jackson-databind"
-    implementation "com.fasterxml.jackson.core:jackson-core"
-    implementation "com.fasterxml.jackson.core:jackson-annotations"
+    implementation "com.fasterxml.jackson.core:jackson-databind:${revFasterXml}"
+    implementation "com.fasterxml.jackson.core:jackson-core:${revFasterXml}"
+    implementation "com.fasterxml.jackson.core:jackson-annotations:${revFasterXml}"
 
 }
 
