--- a/mysql-persistence/build.gradle
+++ b/mysql-persistence/build.gradle
@@ -9,8 +9,8 @@ dependencies {
 
     implementation "com.google.guava:guava:${revGuava}"
 
-    implementation "com.fasterxml.jackson.core:jackson-databind"
-    implementation "com.fasterxml.jackson.core:jackson-core"
+    implementation "com.fasterxml.jackson.core:jackson-databind:${revFasterXml}"
+    implementation "com.fasterxml.jackson.core:jackson-core:${revFasterXml}"
 
     implementation "org.apache.commons:commons-lang3"
 
