--- a/test-util/build.gradle
+++ b/test-util/build.gradle
@@ -14,14 +14,14 @@ dependencies {
     implementation project(':conductor-redis-persistence')
 
 
-    implementation "com.fasterxml.jackson.core:jackson-databind"
-    implementation "com.fasterxml.jackson.core:jackson-core"
+    implementation "com.fasterxml.jackson.core:jackson-databind:${revFasterXml}"
+    implementation "com.fasterxml.jackson.core:jackson-core:${revFasterXml}"
     implementation "org.apache.commons:commons-lang3"
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.retry:spring-retry'
 
-    implementation "com.fasterxml.jackson.core:jackson-databind"
-    implementation "com.fasterxml.jackson.core:jackson-core"
+    implementation "com.fasterxml.jackson.core:jackson-databind:${revFasterXml}"
+    implementation "com.fasterxml.jackson.core:jackson-core:${revFasterXml}"
 
     implementation "org.apache.commons:commons-lang3"
 
