--- a/common/build.gradle
+++ b/common/build.gradle
@@ -23,6 +23,10 @@ dependencies {
     implementation "com.fasterxml.jackson.module:jackson-module-afterburner"
 
     testImplementation 'org.springframework.boot:spring-boot-starter-validation'
+
+    implementation "jakarta.ws.rs:jakarta.ws.rs-api:${revJAXRS}"
+    implementation 'jakarta.platform:jakarta.jakartaee-api:10.0.0' //Needed to jakarta.ws.rs-api
+
 }
 
 /*
